--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /native_client/python/utils_wrap.cpp
 /native_client/javascript/build
 /native_client/javascript/deepspeech_wrap.cxx
+#Data
+data/quran/wav/*
+data/TIMIT/*
