Adopted v0.6.0 options. Added Tarteel Users importer.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Main training requirements
-tensorflow == 1.14.0
+tensorflow-gpu == 1.14.0
 numpy == 1.15.4
 progressbar2
 pandas
@@ -29,6 +29,6 @@ paramiko >= 2.1
 scipy
 matplotlib
 
-wget
-deepspeech
-tables
+#wget
+#deepspeech
+#tables
