udpate scripts for v0.7 - download and evaluate tarteel data (#3)
* udpate scripts for v0.7

* Support download and evaluation of tarteel data

* review comments

* add langauge model

Co-authored-by: Ahmed Ibrahim <ahmedibrahem777@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,12 @@
 /native_client/javascript/deepspeech_wrap.cxx
 #Data
 data/quran/wav/*
+data/quran/tusers/quran_tusers/*
 data/TIMIT/*
 /doc/.build/
 /doc/xml-c/
 /doc/xml-java/
+data/quran/quran_all.csv
+data/quran/quran_dev.csv
+data/quran/quran_test.csv
+data/quran/quran_train.csv
