Integrate DeepSpeech tajweed pipeline and morphology tools

--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "better-sqlite3": "^12.4.1",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "deepspeech": "^0.9.3",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
     "input-otp": "1.4.1",
@@ -60,6 +62,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.33",
     "next-themes": "^0.4.6",
+    "node-wav": "^0.0.2",
     "openai": "latest",
     "react": "^18",
     "react-day-picker": "9.8.0",
