--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "next": "14.2.33",
     "next-themes": "^0.4.6",
     "openai": "latest",
-    "react": "^18",
+    "react": "18.2.0",
     "react-day-picker": "9.8.0",
-    "react-dom": "^18",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
