--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "build:standalone": "next build",
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "rundev": "next dev",
     "start": "next start",
     "start:standalone": "node .next/standalone/server.js"
@@ -74,11 +74,12 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@eslint/eslintrc": "^3.3.1",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.33",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "^15.5.6",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
