--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "webpack": "5",
     "ws": "latest",
     "zod": "3.25.67"
   },
