--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "geist": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
