--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "next-themes": "^0.4.6",
     "openai": "latest",
     "react": "18.2.0",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "9.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.60.0",
