--- a/package.json
+++ b/package.json
@@ -87,5 +87,16 @@
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5.9.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
+      "ffmpeg-static",
+      "unrs-resolver"
+    ],
+    "ignoredBuiltDependencies": [
+      "@tailwindcss/oxide",
+      "unrs-resolver"
+    ]
   }
 }
