--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "latest",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -63,28 +63,28 @@
     "react-confetti": "^6.4.0",
     "react-day-picker": "9.8.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.60.0",
-    "react-resizable-panels": "^2.1.7",
+    "react-hook-form": "^7.65.0",
+    "react-resizable-panels": "^2.1.9",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "sql.js": "^1.13.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "webpack": "5",
+    "webpack": "^5.102.1",
     "ws": "latest",
     "zod": "3.25.67"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.9",
-    "@types/node": "^22.18.11",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@tailwindcss/postcss": "^4.1.15",
+    "@types/node": "^22.18.12",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "cross-env": "^10.1.0",
     "eslint": "^9.38.0",
     "eslint-config-next": "^15.5.6",
-    "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.15",
     "tw-animate-css": "1.3.3",
     "typescript": "^5.9.3"
   },
