Add Arabic pronunciation playback to kid class

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "embla-carousel-react": "8.5.1",
     "ffmpeg-static": "^5.2.0",
     "geist": "latest",
+    "google-tts-api": "^2.0.2",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.33",
