--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "cross-env ESLINT_USE_FLAT_CONFIG=false eslint .",
     "rundev": "next dev",
     "start": "next start",
-    "start:standalone": "node .next/standalone/server.js"
+    "start:standalone": "node .next/standalone/server.js",
+    "fetch:child-audio": "node scripts/fetch-child-lesson-audio.mjs"
   },
   "engines": {
     "node": ">=18.18.0",
@@ -86,7 +87,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "google-tts-api": "^2.0.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
