Embed child lesson audio as text data URIs

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 # production
 /build
 
-# generated audio assets
-public/audio/child-lessons/
+# generated audio caches
+/public/audio/child-lessons/
 
 # debug
 npm-debug.log*
